<resources>

    <!-- Main -->
    <string name="app_name">Ticket to Ride Assistant</string>
    <string name="nav_top">Status</string>
    <string name="nav_points">Points</string>
    <string name="nav_drawCards">Draw Train Car Cards</string>
    <string name="nav_pickCardsFromWarehouse">Break a Warehouse</string>
    <string name="nav_showRoutes">Routes</string>
    <string name="nav_showStations">Train Stations</string>
    <string name="nav_showTickets">Destination Tickets</string>
    <string name="nav_buildRoute">Claim a Route</string>
    <string name="nav_buildStation">Build a Station</string>
    <string name="nav_drawTicket">Draw Ticket</string>
    <string name="nav_tickets_decks">Decks of tickets</string>
    <string name="nav_help">Help</string>
    <string name="nav_open_drawer">Open Navigation View</string>
    <string name="nav_close_drawer">Close Navigation View</string>

    <!-- Status -->
    <string name="points">Points</string>
    <string name="cars">Cars</string>
    <string name="stations">Train Stations</string>
    <string name="tickets">Destination Tickets</string>
    <string name="longestPath">Longest Path</string>

    <!-- Points -->
    <string name="claimed_routes">Claimed Routes</string>
    <string name="stations_left">Stations left</string>
    <string name="total">Total</string>
    <string name="possibleBonuses">Possible bonuses</string>
    <string name="longestPathBonus">Longest Path Bonus</string>
    <string name="globetrotterBonus">Globetrotter Bonus</string>


    <!-- Cards panel -->
    <string name="too_much_cards">Too much cards</string>
    <string name="too_little_cards">Too little cards</string>
    <string name="too_little_locos">Too little locomotives</string>
    <string name="too_little_cars">Too little cars</string>
    <string name="not_enough_cards">Not enough cards</string>

    <!-- Draw carCards -->
    <string name="draw_cards_label">Number of carCards to draw:</string>

    <!-- Routes -->
    <string name="build_new_route">Claim a Route</string>
    <string name="built_routes_header">Claimed Routes:</string>

    <!-- Stations -->
    <string name="build_new_station">Build a Station</string>
    <string name="station_cost">Train Station cost:</string>
    <string name="built_stations_header">Built Train Stations:</string>
    <string name="no__more_stations">No more stations available</string>

    <!-- Tickets -->
    <string name="draw_ticket">Draw a Ticket</string>
    <string name="tickets_header">Your Destination Tickets:</string>
    <string name="realized">Realized?</string>
    <string name="ticket_details">Destination Ticket details:</string>
    <string name="add_new_ticket">Define a new ticket</string>
    <string name="enter_points">Enter the number of points</string>
    <string name="city1">City 1</string>
    <string name="city2">City 2</string>
    <string name="choose_decks_of_tickets">Choose decks of Destination Tickets:</string>
    <string name="accept">Accept</string>

    <!-- Lock switch -->
    <string name="cards_locked">Cards locked</string>
    <string name="cards_unlocked">Cards unlocked (tap to add, hold to remove)</string>
    <string name="locked">Locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="delete_comment">Press and hold to remove</string>

    <!-- Help Activity -->
    <string name="help_status">
        Show player points, number of cars and train stations left, number of realized/unrealized tickets, length of the longest continuous path.
        You can unlock the carCards panel using the switch on the bottom, to manually modify the numbers of carCards.
        To add (remove) a carCard of an individual color, tap (long press) the corresponding tile.</string>
    <string name="help_points">
        Show detailed calculations of points</string>
    <string name="help_draw">
        You can draw new train car carCards here. Add carCard by taping it or remove by long pressing.
        Accept your choice by pressing green button or reset the carCards set by pressing red button.</string>
    <string name="help_route">
        Show claimed routes. You can unlock the routes list and remove the route by long pressing it.
        To claim a new one press the "Claim a route" button. First choose cities names. Then select proper train car carCards.
        Claim the route by pressing green button or reset the carCards set by pressing red button.</string>
    <string name="help_ticket">
        Show drawn destination tickets. You can unlock the ticket list and remove the ticket by long pressing it.
        To draw a new ticket press "Draw a ticket" button. First choose cities names. Then draw a ticket by pressing the green button.
        You can also define your own ticket (if not available in selected ticket decks). To do this, click the "+" button on the "Draw Ticket" screen.</string>
    <string name="help_station">
        (Only available only in some games) Show built train stations. You can unlock the station list and remove the station by long pressing it.
        To build a new one press the "Build a new station" button. First choose cities names. Then select proper car carCards.
        Build the station by pressing green button or reset the carCards set by pressing red button.</string>
    <string name="help_warehouse">
        (Only available in some games) Pick train car carCards from a warehouse.
        Add carCard by taping it or remove by long pressing.
        Accept your choice by pressing green button or reset the carCards set by pressing red button.</string>
    <string name="help_decks">
        Here you can choose decks of destination tickets.</string>

    <string name="TtRA_Europe_Tickets_Base_Short">Europe Base. Short</string>
    <string name="TtRA_Europe_Tickets_Base_Long">Europe Base. Long</string>
    <string name="TtRA_Europe_Tickets_Base_BigCities">Europe Base. Big cities</string>
    <string name="TtRA_Europe_Tickets_1912_Short">Europe 1912. Short</string>
    <string name="TtRA_Europe_Tickets_1912_Long">Europe 1912. Long</string>
    <string name="TtRA_Europe_Tickets_1912_BigCities">Europe 1912. Big cities</string>
    <string name="TtRA_USA_Tickets_Base_Short">USA Base. Short</string>
    <string name="TtRA_USA_Tickets_Base_BigCities">USA Base. BigCities</string>
    <string name="TtRA_USA_Tickets_1910_Classic">USA 1910. Classic</string>
    <string name="TtRA_USA_Tickets_1910_BigCities">USA 1910. BigCities</string>
    <string name="TtRA_Nordic_Tickets_Base">Nordic Countries. Base</string>

    <string name="choose_game">Choose your game</string>
    <string name="exit">Exit</string>
    <string name="exit_message">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string-array name="games">
        <item>USA</item>
        <item>Europe</item>
        <item>Nordic Countries</item>
    </string-array>

    <string name="www">Author website: <a href="http://www.sokolak.pl">http://www.sokolak.pl</a></string>

</resources>