<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".pl.sokolak87.TicketToRideAssistant.Fragments.HelpActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_main" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tv"
                android:layout_alignBottom="@+id/tv"
                android:layout_alignParentLeft="true"
                android:layout_margin="8dp"
                android:src="@drawable/ic_app_icon" />

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="8dp"
                android:layout_toRightOf="@+id/iv"
                android:gravity="center_vertical"
                android:textSize="@dimen/help_title_text_size"
                android:text="@string/app_name" />

        </RelativeLayout>

        <TextView
            style="@style/HelpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:textSize="@dimen/help_web_text_size"
            android:text="@string/www" />

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            style="@style/HelpHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_top" />

        <TextView
            style="@style/HelpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_status" />

        <TextView
            style="@style/HelpHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_drawCards" />

        <TextView
            style="@style/HelpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_draw" />

        <TextView
            style="@style/HelpHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_showRoutes" />

        <TextView
            style="@style/HelpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_route" />

        <TextView
            style="@style/HelpHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_showStations" />

        <TextView
            style="@style/HelpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_station" />

        <TextView
            style="@style/HelpHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_showTickets" />

        <TextView
            style="@style/HelpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_ticket" />

        <TextView
            style="@style/HelpHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_pickCardsFromWarehouse" />

        <TextView
            style="@style/HelpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_warehouse" />

        <TextView
            style="@style/HelpHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_tickets_decks" />

        <TextView
            style="@style/HelpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_decks" />

    </LinearLayout>
</ScrollView>