<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_top"
            android:checked="true"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/nav_top" />
        <item
            android:id="@+id/nav_draw_cards"
            android:icon="@drawable/ic_content_copy_black_24dp"
            android:title="@string/nav_drawCards" />
        <item
            android:id="@+id/nav_show_routes"
            android:icon="@drawable/ic_train_black_24dp"
            android:title="@string/nav_showRoutes" />
        <item
            android:id="@+id/nav_show_stations"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_showStations" />
        <item
            android:id="@+id/nav_show_tickets"
            android:icon="@drawable/ic_local_play_black_24dp"
            android:title="@string/nav_showTickets" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/nav_help" />
    </group>
</menu>