<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackDark"
    android:orientation="vertical"
    tools:context="pl.sokolak.TicketToRideAssistant.pl.sokolak87.TicketToRideAssistant.Fragments.MainActivity">

    <Button
        android:id="@+id/draw_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_green"
        android:text="@string/draw_ticket"
        android:textColor="#80000000" />

    <TextView
        android:id="@+id/tickets_header"
        android:layout_width="match_parent"
        android:layout_height="64sp"
        android:gravity="center|bottom"
        android:text="@string/tickets_header" />

    <Switch
        android:id="@+id/switch_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/locked"
        android:textColor="@color/colorReset" />

    <TextView
        android:id="@+id/delete_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/delete_comment"
        android:textColor="@color/colorReset"
        android:textSize="16sp"
        android:visibility="invisible" />

    <ListView
        android:id="@+id/list_tickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackLight" />

</LinearLayout>