<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackDark"
    tools:context="com.kroko.TicketToRideAssistant.Fragments.MainActivity">

    <Button
        android:id="@+id/new_station"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_new_station"
        android:textColor="#80000000"
        android:background="@drawable/button"
        android:onClick="onClickBuildStation"/>

    <TextView
        android:id="@+id/built_routes_header"
        android:layout_width="match_parent"
        android:layout_height="64sp"
        android:gravity="center|bottom"
        android:text="@string/built_stations_header"/>

    <Switch
        android:id="@+id/switch_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorReset"
        android:layout_marginStart="6dp"
        android:text="@string/locked" />

    <TextView
        android:id="@+id/delete_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_comment"
        android:textColor="@color/colorReset"
        android:layout_marginStart="6dp"
        android:textSize="16sp"
        android:visibility="invisible" />

    <ListView
        android:id="@+id/list_stations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
</LinearLayout>