<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackDark"
    android:orientation="vertical"
    tools:context="pl.sokolak.TicketToRideAssistant.Fragments.MainActivity">

    <Button
        android:id="@+id/new_route"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/button_green"
        android:text="@string/build_new_route"
        android:textSize="@dimen/text_size_normal"
        android:textColor="#80000000" />

    <TextView
        android:id="@+id/built_routes_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:layout_marginTop="@dimen/text_margin"
        android:textSize="@dimen/text_size_normal"
        android:text="@string/built_routes_header" />

    <Switch
        android:id="@+id/switch_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/locked"
        android:textSize="@dimen/lock_text_size"
        android:textColor="@color/colorReset"
        tools:ignore="UseSwitchCompatOrMaterialXml"/>

    <TextView
        android:id="@+id/delete_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/delete_comment"
        android:textColor="@color/colorReset"
        android:textSize="@dimen/lock_text_size"
        android:visibility="invisible" />

    <ListView
        android:id="@+id/list_routes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackLight" />

</LinearLayout>