<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/build_route_frag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackDark"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/spinners_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/ticket_details"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/ticket_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:background="@color/colorBackLight"
        android:gravity="center_vertical"
        android:text="@string/ticket_details"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toStartOf="@+id/points_value"
        app:layout_constraintTop_toBottomOf="@+id/spinners_container" />

    <TextView
        android:id="@+id/points_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:gravity="center_vertical"
        android:text="@string/points"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toStartOf="@+id/points_value"
        app:layout_constraintTop_toBottomOf="@+id/ticket_details" />

    <TextView
        android:id="@+id/points_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/points_label" />


    <TextView
        android:id="@+id/realized_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/text_margin"
        android:gravity="center_vertical"
        android:text="@string/realized"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toBottomOf="@+id/points_label" />

    <ImageView
        android:id="@+id/realized_value"
        android:layout_width="@dimen/realized_icon_height"
        android:layout_height="@dimen/realized_icon_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/realized_label" />

    <Button
        android:id="@+id/add_ticket"
        android:layout_width="@dimen/button_height"
        android:layout_height="@dimen/button_height"
        android:layout_marginVertical="16dp"
        android:background="@drawable/ic_baseline_add_circle_24"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/realized_label" />

    <ImageButton
        android:id="@+id/accept_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/button_green"
        android:padding="4dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_check_circle_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>